feat: 고수의 바로 견적 채팅방 목록 조회 기능 구현 (GS-88)